--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
-/*#fcdf43 yellow sticky color*/
-
 body {
   vertical-align: middle;
   font-family: "Pacifico", sans-serif;
+  background-image: url("../img/oldpaper.jpg");
 }
 
 h1 {
@@ -10,33 +9,93 @@ h1 {
   padding-bottom: 30px;
 }
 
+form {
+  background: 1px solid black;
+  margin-bottom: 10px;
+}
+
+input {
+  padding: 10px 0;
+  font-size: 18px;
+  text-align: left;
+  vertical-align: middle;
+  margin-bottom: 12px;
+  border-radius: 10px;
+  font-family: "Pacifico", sans-serif;
+  font-weight: 100;
+}
+
+li {
+  padding-left: 10px;
+  width: 300px;
+  height: auto;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+ol {
+  font-size: 1.5em;
+  text-align: left;
+}
+
 #container {
   width: 400px;
-  height:auto;
+  height: auto;
   margin: 0 auto;
   padding-top: 15px;
   vertical-align: middle;
   text-align: center;
-  /*background-image: url("../img/sticky.jpg");*/
   background-size: cover;
   background-position: center;
   background-color: #fcdf43;
   border-radius: 10px;
   border: 1px solid black;
+  overflow-x: auto;
 }
 
 #addButton {
-font-family: "Oswald", sans-serif;
-display: inline-block;
-/*padding-left: 25px;*/
-margin-left: 15px;
-padding: 7px 5px;
-border-radius: 5px;
-background-color: #9db8e4;
-text-align: center;
+  font-family: "Oswald", sans-serif;
+  display: inline-block;
+  margin-left: 15px;
+  padding: 7px 5px;
+  border-radius: 5px;
+  background-color: #9db8e4;
+  text-align: center;
+  border: 3px white solid;
+}
+
+.grow:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
+
+.outlineClick {
+  box-shadow: 0 0 3pt 2pt black;
+  z-index: 1;
+}
+
+.crossOut {
+  text-decoration: line-through;
 }
 
 form {
   display: inline-block;
+}
 
+ol li:nth-child(even){
+  background: white;
+  border-radius: 10px;
+}
+
+body.dragging, body.dragging * {
+  cursor: move !important;
+}
+
+.dragged {
+  position: absolute;
+  opacity: 0.5;
+  z-index: 2000;
 }
