--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ ol {
 
 #container {
   width: 400px;
-  height: 550px;
+  height: 650px;
   margin: 0 auto;
   padding-top: 15px;
   vertical-align: middle;
@@ -59,6 +59,11 @@ ol {
   background-color: #fcdf43;
   border-radius: 10px;
   border: 1px solid black;
+}
+
+#itemList {
+  height: 300px;
+  background: 1px solid black;
   overflow: auto;
 }
 
